Fixed aws badge spacing

--- a/certificates.css
+++ b/certificates.css
@@ -185,6 +185,7 @@ hr {
     }
     
     #aws {
+        top: 0;
         width: 60%;
         height: auto;
         margin: auto;
